<resources>
  <string name="app_name">EUC World</string>
  <string name="default_font_family" translatable="false">sans-serif-condensed</string>
  <string name="light_font_family" translatable="false">sans-serif-condensed-light</string>
  <string name="strong_font_family" translatable="false">sans-serif-condensed</string>
  <string name="general_preferences" translatable="false">speed_preferences</string>
  <string name="log_preferences" translatable="false">log_preferences</string>
  <string name="alarm_preferences" translatable="false">alarm_preferences</string>
  <string name="watch_preferences" translatable="false">watch_preferences</string>
  <string name="wheel_settings" translatable="false">wheel_settings</string>
  <string name="trip_settings" translatable="false">trip_settings</string>
  <string name="speech_preferences" translatable="false">speech_preferences</string>
  <string name="speech_messages_preferences" translatable="false">speech_messages_preferences</string>
  <string name="livemap_preferences" translatable="false">livemap_preferences</string>
  <string name="alarms_enabled" translatable="false">alarms_enabled</string>
  <string name="disable_phone_vibrate" translatable="false">disable_phone_vibrate</string>
  <string name="alarm_1_speed" translatable="false">alarm_1_speed</string>
  <string name="alarm_1_battery" translatable="false">alarm_1_battery</string>
  <string name="alarm_2_speed" translatable="false">alarm_2_speed</string>
  <string name="alarm_2_battery" translatable="false">alarm_2_battery</string>
  <string name="alarm_3_speed" translatable="false">alarm_3_speed</string>
  <string name="alarm_3_battery" translatable="false">alarm_3_battery</string>
  <string name="alarm_current" translatable="false">alarm_current</string>
  <string name="alarm_temperature" translatable="false">alarm_temperature</string>
  <string name="light_enabled" translatable="false">light_enabled</string>
  <string name="led_enabled" translatable="false">led_enabled</string>
  <string name="handle_button_disabled" translatable="false">handle_button_disabled</string>
  <string name="wheel_max_speed" translatable="false">wheel_max_speed</string>
  <string name="speaker_volume" translatable="false">speaker_volume</string>
  <string name="pedals_adjustment" translatable="false">pedals_adjustment</string>
  <string name="pedals_mode" translatable="false">pedals_mode</string>
  <string name="light_mode" translatable="false">light_mode</string>
  <string name="strobe_mode" translatable="false">strobe_mode</string>
  <string name="led_mode" translatable="false">led_mode</string>
  <string name="start_calibration" translatable="false">start_calibration</string>
  <string name="alarm_mode" translatable="false">alarm_mode</string>
  <string name="gotway_84v" translatable="false">gotway_84v</string>
  <string name="gotway_voltage" translatable="false">gotway_voltage</string>
  <string name="no_settings" translatable="false">no_settings</string>
  <string name="auto_log" translatable="false">auto_log</string>
  <string name="auto_upload" translatable="false">auto_upload</string>
  <string name="log_location_data" translatable="false">log_location_data</string>
  <string name="use_gps" translatable="false">use_gps</string>
  <string name="use_mi" translatable="false">use_mi</string>
  <string name="use_f" translatable="false">use_f</string>
  <string name="max_speed" translatable="false">max_speed</string>
  <string name="use_ratio" translatable="false">use_ratio</string>
  <string name="horn_mode" translatable="false">horn_mode</string>
  <string name="reset_top_speed" translatable="false">reset_top_speed</string>
  <string name="reset_user_distance" translatable="false">reset_user_distance</string>
  <string name="last_mac" translatable="false">last_mac</string>
  <string name="about" translatable="false">about</string>
  <string name="livemap_api_key" translatable="false">livemap_api_key</string>
  <string name="livemap_update_interval" translatable="false">livemap_update_interval</string>
  <string name="livemap_publish" translatable="false">livemap_publish</string>
  <string name="livemap_publication_delay" translatable="false">livemap_publication_delay</string>
  <string name="livemap_start_new_segment" translatable="false">livemap_start_new_segment</string>
  <string name="speech_messages" translatable="false">speech_messages</string>
  <string name="speech_msg_interval" translatable="false">speech_msg_rate</string>
  <string name="speech_enable" translatable="false">speech_enable</string>
  <string name="speech_rate" translatable="false">speech_rate</string>
  <string name="speech_pitch" translatable="false">speech_pitch</string>
  <string name="speech_only_when_moving" translatable="false">speech_only_when_moving</string>
  <string name="speech_msg_mode" translatable="false">speech_msg_mode</string>
  <string name="speech_enable_on_startup" translatable="false">speech_enable_on_startup</string>
  <string name="speech_messages_speed" translatable="false">speech_messages_speed</string>
  <string name="speech_messages_top_speed" translatable="false">speech_messages_top_speed</string>
  <string name="speech_messages_avg_speed" translatable="false">speech_messages_avg_speed</string>
  <string name="speech_messages_avg_riding_speed" translatable="false">speech_messages_avg_riding_speed</string>
  <string name="speech_messages_distance" translatable="false">speech_messages_distance</string>
  <string name="speech_messages_battery" translatable="false">speech_messages_battery</string>
  <string name="speech_messages_phone_battery" translatable="false">speech_messages_phone_battery</string>
  <string name="speech_messages_voltage" translatable="false">speech_messages_voltage</string>
  <string name="speech_messages_current" translatable="false">speech_messages_current</string>
  <string name="speech_messages_power" translatable="false">speech_messages_power</string>
  <string name="speech_messages_temperature" translatable="false">speech_messages_temperature</string>
  <string name="speech_messages_time" translatable="false">speech_messages_time</string>
  <string name="speech_messages_time_from_start" translatable="false">speech_messages_time_from_start</string>
  <string name="speech_messages_time_in_motion" translatable="false">speech_messages_time_in_motion</string>
  <string name="speech_messages_battery_low_level" translatable="false">speech_messages_battery_low_level</string>
  <string name="speech_messages_phone_battery_low_level" translatable="false">speech_messages_phone_battery_low_level</string>
  <string name="speech_messages_distance_use_location" translatable="false">speech_messages_distance_use_location</string>
  <string name="speech_messages_weather" translatable="false">speech_messages_weather</string>
  <string name="show_when_locked" translatable="false">show_when_locked</string>
  <string name="livemap_auto_start" translatable="false">livemap_auto_start</string>
  <string name="livemap_auto_finish" translatable="false">livemap_auto_finish</string>
  <string name="livemap_auto_finish_delay" translatable="false">livemap_auto_finish_delay</string>
  <string name="speech_gps_bt_status" translatable="false">speech_gps_bt_status</string>
  <string name="speed_correction" translatable="false">speed_correction</string>
  <string name="dist_correction" translatable="false">dist_correction</string>
  <string name="speech_use_a2dp_only" translatable="false">speech_use_a2dp_only</string>
  <string name="dont_reset_data" translatable="false">dont_reset_data</string>
  <string name="speech_focus" translatable="false">speech_focus</string>
  <string name="flic_button_setup" translatable="false">flic_button_setup</string>
  <string name="flic_preferences" translatable="false">flic_preferences</string>
  <string name="flic_horn_mode" translatable="false">flic_horn_mode</string>
  <string name="flic_action_single" translatable="false">flic_action_single</string>
  <string name="flic_action_double" translatable="false">flic_action_double</string>
  <string name="flic_action_hold" translatable="false">flic_action_hold</string>
  <string name="alarm_current_sustained" translatable="false">alarm_current_sustained</string>
  <string name="optimized_battery_level" translatable="false">optimized_battery_level</string>
  <string name="watch_enable_on_startup" translatable="false">watch_enable_on_startup</string>
  <string name="alarms_enabled_title">Enable alarms</string>
  <string name="alarms_enabled_summary">Allow the phone to vibrate as a warning or enable voice alarms</string>
  <string name="disable_phone_vibrate_title">Disable phone vibration</string>
  <string name="disable_phone_vibrate_summary">Phone will not vibrate but the alarm will be passed to a connected watch</string>
  <string name="speed_alarm_1_title">Speed alarm - highest priority</string>
  <string name="alarm_1_speed_title">Speed</string>
  <string name="alarm_1_speed_summary">Speed that triggers the alarm</string>
  <string name="alarm_1_battery_title">Battery percent</string>
  <string name="alarm_1_battery_summary">Enable alarm when battery at or below this value</string>
  <string name="speed_alarm_2_title">Speed alarm - medium priority</string>
  <string name="alarm_2_speed_title">Speed</string>
  <string name="alarm_2_speed_summary">Speed that triggers the alarm</string>
  <string name="alarm_2_battery_title">Battery percent</string>
  <string name="alarm_2_battery_summary">Enable alarm when battery at or below this value</string>
  <string name="speed_alarm_3_title">Speed alarm - lowest priority</string>
  <string name="alarm_3_speed_title">Speed</string>
  <string name="alarm_3_speed_summary">Speed that triggers the alarm</string>
  <string name="alarm_3_battery_title">Battery percent</string>
  <string name="alarm_3_battery_summary">Enable alarm when battery at or below this value</string>
  <string name="current_alarm_title">Current alarm</string>
  <string name="alarm_current_title">Peak current</string>
  <string name="alarm_current_summary">Peak current that triggers the alarm</string>
  <string name="temperature_alarm_title">Temperature alarm</string>
  <string name="alarm_temperature_title">Temperature</string>
  <string name="alarm_temperature_summary">Temperature that triggers the alarm</string>
  <string name="alarm_current_sustained_title">Current</string>
  <string name="alarm_current_sustained_summary">Current that triggers the alarm</string>
  <string name="voltage_dependent_alarm_title">Voltage-dependent speed alarm</string>
  <string name="voltage_dependent_alarm_summary">Use one alarm with three voltage &amp; speed thresholds instead of three speed-only alarms</string>
  <string name="voltage_dependent_alarms" translatable="false">voltage_dependent_alarms</string>
  <string name="alarm_voltage" translatable="false">alarm_voltage</string>
  <string name="alarm_voltage_title">Overvoltage alarm</string>
  <string name="alarm_voltage_summary">Enable alarm when battery voltage goes above safe limit</string>
  <string name="custom_audio_alarms_title">Custom Audio Alarm</string>
  <string name="custom_audio_alarms_summary">Use sound files on your device a an alarm.</string>
  <string name="select_file">Select a file</string>
  <string name="select_file_description">File will play continuously until alarm condition ends</string>
  <string name="alarm_1_file" translatable="false">alarm_1_file</string>
  <string name="alarm_2_file" translatable="false">alarm_2_file</string>
  <string name="alarm_3_file" translatable="false">alarm_3_file</string>
  <string name="audio_alarm_1_enabled" translatable="false">audio_alarm_1_enabled</string>
  <string name="audio_alarm_2_enabled" translatable="false">audio_alarm_2_enabled</string>
  <string name="audio_alarm_3_enabled" translatable="false">audio_alarm_3_enabled</string>
</resources>