<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sample="http://schemas.android.com/apk/res-auto"
    android:enabled="false">

    <CheckBoxPreference
        android:key="@string/alarms_enabled"
        android:summary="@string/alarms_enabled_summary"
        android:title="@string/alarms_enabled_title" />

    <CheckBoxPreference
        android:dependency="@string/alarms_enabled"
        android:key="@string/disable_phone_vibrate"
        android:summary="@string/disable_phone_vibrate_summary"
        android:title="@string/disable_phone_vibrate_title" />

    <CheckBoxPreference
        android:key="@string/alarm_voltage"
        android:summary="@string/alarm_voltage_summary"
        android:title="@string/alarm_voltage_title" />

    <CheckBoxPreference
        android:dependency="@string/alarms_enabled"
        android:key="@string/voltage_dependent_alarms"
        android:summary="@string/voltage_dependent_alarm_summary"
        android:title="@string/voltage_dependent_alarm_title" />

    <PreferenceCategory android:title="@string/speed_alarm_1_title">

        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:defaultValue="30"
            android:key="@string/alarm_1_speed"
            android:summary="@string/alarm_1_speed_summary"
            android:title="@string/alarm_1_speed_title"
            sample:msbp_dialogEnabled="true"
            sample:msbp_interval="1"
            sample:msbp_maxValue="100"
            sample:msbp_measurementUnit="km/h"
            sample:msbp_measurementUnitImperial="mph"
            sample:msbp_minValue="0"
            sample:msbp_type="speed" />

        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:defaultValue="100"
            android:key="@string/alarm_1_battery"
            android:summary="@string/alarm_1_battery_summary"
            android:title="@string/alarm_1_battery_title"
            sample:msbp_dialogEnabled="true"
            sample:msbp_interval="1"
            sample:msbp_maxValue="100"
            sample:msbp_measurementUnit="%"
            sample:msbp_minValue="0" />

        <CheckBoxPreference
            android:dependency="@string/alarms_enabled"
            android:key="@string/audio_alarm_1_enabled"
            android:summary="@string/custom_audio_alarms_summary"
            android:title="@string/custom_audio_alarms_title"
            sample:enabled="false" />

        <Preference
            android:dependency="@string/audio_alarm_1_enabled"
            android:key="@string/alarm_1_file"
            android:persistent="true"
            android:summary="@string/select_file_description"
            android:title="@string/select_file" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/speed_alarm_2_title">

        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:defaultValue="0"
            android:key="@string/alarm_2_speed"
            android:summary="@string/alarm_2_speed_summary"
            android:title="@string/alarm_2_speed_title"
            sample:msbp_dialogEnabled="true"
            sample:msbp_interval="1"
            sample:msbp_maxValue="100"
            sample:msbp_measurementUnit="km/h"
            sample:msbp_measurementUnitImperial="mph"
            sample:msbp_minValue="0"
            sample:msbp_type="speed" />

        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:defaultValue="0"
            android:key="@string/alarm_2_battery"
            android:summary="@string/alarm_2_battery_summary"
            android:title="@string/alarm_2_battery_title"
            sample:msbp_dialogEnabled="true"
            sample:msbp_interval="1"
            sample:msbp_maxValue="100"
            sample:msbp_measurementUnit="%"
            sample:msbp_minValue="0" />

        <CheckBoxPreference
            android:dependency="@string/alarms_enabled"
            android:key="@string/audio_alarm_2_enabled"
            android:summary="@string/custom_audio_alarms_summary"
            android:title="@string/custom_audio_alarms_title"
            sample:enabled="false" />

        <Preference
            android:dependency="@string/audio_alarm_2_enabled"
            android:key="@string/alarm_2_file"
            android:summary="@string/select_file_description"
            android:title="@string/select_file" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/speed_alarm_3_title">

        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:defaultValue="100"
            android:key="@string/alarm_3_speed"
            android:summary="@string/alarm_3_speed_summary"
            android:title="@string/alarm_3_speed_title"
            sample:msbp_dialogEnabled="true"
            sample:msbp_interval="1"
            sample:msbp_maxValue="100"
            sample:msbp_measurementUnit="km/h"
            sample:msbp_measurementUnitImperial="mph"
            sample:msbp_minValue="0"
            sample:msbp_type="speed" />

        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:defaultValue="0"
            android:key="@string/alarm_3_battery"
            android:summary="@string/alarm_3_battery_summary"
            android:title="@string/alarm_3_battery_title"
            sample:msbp_dialogEnabled="true"
            sample:msbp_interval="1"
            sample:msbp_maxValue="100"
            sample:msbp_measurementUnit="%"
            sample:msbp_minValue="0" />

        <CheckBoxPreference
            android:dependency="@string/alarms_enabled"
            android:key="@string/audio_alarm_3_enabled"
            android:summary="@string/custom_audio_alarms_summary"
            android:title="@string/custom_audio_alarms_title"
            sample:enabled="false" />

        <Preference
            android:dependency="@string/audio_alarm_3_enabled"
            android:key="@string/alarm_3_file"
            android:summary="@string/select_file_description"
            android:title="@string/select_file" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/current_alarm_title">

        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:defaultValue="0"
            android:key="@string/alarm_current"
            android:summary="@string/alarm_current_summary"
            android:title="@string/alarm_current_title"
            sample:msbp_dialogEnabled="true"
            sample:msbp_interval="1"
            sample:msbp_maxValue="150"
            sample:msbp_measurementUnit="A"
            sample:msbp_minValue="0" />

        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:defaultValue="0"
            android:key="@string/alarm_current_sustained"
            android:summary="@string/alarm_current_sustained_summary"
            android:title="@string/alarm_current_sustained_title"
            sample:msbp_dialogEnabled="true"
            sample:msbp_interval="1"
            sample:msbp_maxValue="150"
            sample:msbp_measurementUnit="A"
            sample:msbp_minValue="0" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/temperature_alarm_title">

        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:defaultValue="60"
            android:key="@string/alarm_temperature"
            android:summary="@string/alarm_temperature_summary"
            android:title="@string/alarm_temperature_title"
            sample:msbp_dialogEnabled="true"
            sample:msbp_interval="1"
            sample:msbp_maxValue="80"
            sample:msbp_measurementUnit="°C"
            sample:msbp_measurementUnitImperial="°F"
            sample:msbp_minValue="20"
            sample:msbp_type="temperature" />

    </PreferenceCategory>

</PreferenceScreen>